# aleph_api

./: README.md  index.js  mytoken.json  package-lock.json  package.json
mynft/: Cargo.toml  lib.rs
